Fixed sneaky z-index problem. I'm so smart

--- a/assets/css/layout.css
+++ b/assets/css/layout.css
@@ -104,6 +104,7 @@ position: absolute;
 .base-menu ul li {
     float: left;
     position: relative;
+    list-style-type: none;
 }
 .base-menu ul li.right {
 float: right;	
